Colaboratory를 통해 생성됨

--- a/plot_rsfmri_re4.ipynb
+++ b/plot_rsfmri_re4.ipynb
@@ -20,6 +20,7 @@
     "colab": {
       "name": "plot_rsfmri_re4.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -75,18 +76,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lg4PeAlvhMAE",
-        "outputId": "151d0351-df5c-4910-a35f-5dd9adbf1dbd"
+        "id": "lg4PeAlvhMAE"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['sub_0072_4', 'sub_0182_3', 'sub_0209_2', 'sub_0250', 'sub_0291', 'sub_0291_3', 'sub_0314_1', 'sub_0365_1', 'sub_0384_1', 'sub_0398_2', 'sub_0402', 'sub_0412_1', 'sub_0422_3', 'sub_0473_2', 'sub_0483_2', 'sub_0486', 'sub_0499', 'sub_0514_2', 'sub_0605_2', 'sub_0723_2', 'sub_0725_3', 'sub_0856', 'sub_0881', 'sub_0915', 'sub_0936', 'sub_0975', 'sub_1021', 'sub_1031', 'sub_1074', 'sub_1075', 'sub_1123', 'sub_1124', 'sub_1247', 'sub_1281', 'sub_1304', 'sub_1314', 'sub_1332', 'sub_1336', 'sub_1370', 'sub_1487', 'sub_1553', 'sub_1731', 'sub_1821', 'sub_1851', 'sub_1860', 'sub_1902', 'sub_1909', 'sub_1917', 'sub_1922', 'sub_1971', 'sub_1992', 'sub_2026', 'sub_2038', 'sub_2195', 'sub_2204', 'sub_2219', 'sub_2221', 'sub_2232', 'sub_2246', 'sub_2263', 'sub_2273', 'sub_2295', 'sub_2312', 'sub_2313', 'sub_2328_2', '.DS_Store', 'sub_2232.gz']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "sdir = os.listdir(path0)\n",
         "print(sdir)"
